# hologram-interview-project

./: .gitignore  Dockerfile  README.md  api.py  app.py  db.py  docker-compose.yaml  pyproject.toml  requirements.txt  utils.py
client/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue  Home.vue  List.vue  Upload.vue  app.js  upload.js
client/static/assets/: main.css  main.js
src/hologram_project/: api.py  constants.py  db.py  exceptions.py  utils.py
templates/: home.html  index.html  list.html  upload.html
tests/: test_utils.py
