[project]
name = "hologram-project"
version = "0.1.0"
description = "A coding exercise for Hologram's interview process"
authors = [
    {name = "Steph Forcier",email = "steph.r.forcier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "hologram_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
